EO-71 Edit in filter technician test